# internal/schemas/authRequest.go
@@ -1,0 +1,6 @@
+package schemas
+
+type AuthRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password"`
+}
